syntax = "proto3";

package account.service;
option go_package = "api";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

service Account {
    // 注册新用户
    rpc Register(RegisterReq) returns (RegisterResp) {};
    // 用户登录
    rpc Login(LoginReq) returns (LoginResp) {};

    /* User */
    //
    rpc GetUser(GetUserReq) returns (GetUserResp) {};
    //
    rpc GetUsers(GetUsersReq) returns (GetUsersResp) {};

    /* Topic */
    rpc GetTopic(GetTopicReq) returns (GetTopicResp) {};
    //

}

//message Device {
//    string hash = 1;
//    string device_id = 2;
//    string platform = 3;
//    int64 last_at = 4;
//    string language = 5;
//}

message RegisterReq {
    string mobile = 1;
    string ip = 2;
}

message RegisterResp {
    string uid = 1 [(gogoproto.customname) = "UID", (gogoproto.jsontag) = "uid"];
}

message LoginReq {
    string input = 1 [(gogoproto.moretags) = "validate:\"required\""];
    string captcha = 2;
    string password = 3;
    string version = 4;
    string device_id = 5;
    string ip = 6;
}

message LoginResp {
    string uid = 1 [(gogoproto.customname) = "UID", (gogoproto.jsontag) = "uid"];
}

message UserInfo {
    string uid = 1;
    int64 created_at = 2;
    int64 updated_at = 3;
    string nick_name = 4;
    string avatar = 5;
    int32 gender = 6;
    string bio = 7;
    string birthday = 8;
    string mobile = 9;
    int32 state = 10;
    //    repeated Device devices = 12;
}

message GetUserReq {
    string uid = 1 [(gogoproto.customname) = "UID", (gogoproto.jsontag) = "uid"];
}

message GetUserResp {
    UserInfo user = 1 [(gogoproto.jsontag) = "user"];
}

message GetUsersReq {
    repeated string uids = 1 [(gogoproto.customname) = "UIDs", (gogoproto.jsontag) = "uids"];
}

message GetUsersResp {
    repeated UserInfo users = 1 [(gogoproto.jsontag) = "users"];
}